# prompt-picker

./: index.html  package-lock.json  package.json
public/: overlay.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/platform/: macos.rs  mod.rs
src/app/: App.test.tsx
src/overlay/: useInputTargetPolling.test.ts  useInputTargetPolling.ts
src/shared/: settingsStore.test.ts  settingsStore.ts
src/ui/: PromptQuickList.test.tsx  PromptQuickList.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx
