[package]
name = "prompt-picker"
version = "1.0.0"
description = "Local macOS Prompt Picker"
authors = [""]
license = ""
repository = ""
edition = "2021"

[lib]
name = "prompt_picker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
